--- a/ProjectDescription_denis1.tex
+++ b/ProjectDescription_denis1.tex
@@ -152,9 +152,9 @@ The local electronic structure associated with a defect or an adsorbate can be r
 
 With the DFT supercell calcualtions there are two conceptual sources of errors. Firstly the periodic defect model itself introduces unphysical interactions between the images of the defects, especially so when the defect introduces additional local polarity. Another source of a long-range error in this case is accumulated delocalied strong correlation due to the repeation of a strongly correlated  defect. Such errors in principle fade off with the size of the supercell. However, this decay can be very slow and the size of the afordable supercell may not be enough to reduce these parasitic interactions to an apreciable level. An even more conceptual problem arises when the defect is charged, as the periodically repeated excessive charge leads to a Coulomb catastrophe. To counteract this unphisicallity one has to include compensating ions or an artificial background charge that may effectively limit reliablilty of the results.
 
-The second source of error is DFT itself. DFT is generally known to provide a good accuracy vs computational cost ratio. However, DFT functionals does not form a hierarchy of progressivly more accurate models converging to the exact solution. As a result, it becomes very difficult to confidenty predict the accuracy of a given fucntional in each particular case and quantify its error. Furthrmore, as DFT struggles to capture strong correlation, so for complex defects with a multiconfigurational character the DFT description may evn be qualitatively wrong.
+The second source of error is DFT itself. DFT is generally known to provide a good accuracy vs computational cost ratio. However, DFT functionals does not form a hierarchy of progressivly more accurate models converging to the exact solution. As a result, it becomes very difficult to confidenty predict the accuracy of a given fucntional in each particular case and quantify its error. Furthrmore, as DFT struggles to capture strong correlation, so for complex defects with a multiconfigurational character the DFT description may even be qualitatively wrong.
 
-The quantum chemical paradigm in contast to DFT does offer a methodological hierarchy allowing systematic improvment of the accuracy in both weakly and strongly correlated systems. One of the The problem of high-level quantum chemical methods is a high scaling of the computatinal cost making applicability of this methods esprohibitive for extended systems. In the last  decades several approaches have been developed that allowed one to neverthes apply 
+The quantum chemical paradigm in contast to DFT does offer a methodological hierarchy allowing systematic improvment of the accuracy in both weakly and strongly correlated systems. A problem that limits a routin applicability of high-level quantum chemical methods for etended systems is their steep scaling and large prefactor of the computational cost. In the last decades there have been several succesful development avenues for the quantum chemical approaches to be used for periodic systems. These include purely periodic models\cite{..} or periodic fragment approaches.\cite{..} In case of point defects, these approach still defect everal approaches have been developed that allowed one to neverthes apply 
 
 cell, wsich periodically repeated with a introduced inside a larger supercell  i.e. periodic    calculating such systems  defects or adsorbates is a  such a system directly, so a model has to be  has to introduce an approximate model.  Such a system is obvisly cannot be treA standard way of   to it is essential to be abl,e to theoretically model an atomistic level perties of such materials, their atomistic modeling at the atomistic level becomes essential. of  atomistically be model      The reaons is that the  of      local reeffect of a defect or the adsoprbate  There is a strong interplay between a defect or adsorbates and the host crystal 
 
