--- a/ProjectDescription_denis1.tex
+++ b/ProjectDescription_denis1.tex
@@ -154,7 +154,16 @@ With the DFT supercell calcualtions there are two conceptual sources of errors. 
 
 The second source of error is DFT itself. DFT is generally known to provide a good accuracy vs computational cost ratio. However, DFT functionals does not form a hierarchy of progressivly more accurate models converging to the exact solution. As a result, it becomes very difficult to confidenty predict the accuracy of a given fucntional in each particular case and quantify its error. Furthrmore, as DFT struggles to capture strong correlation, so for complex defects with a multiconfigurational character the DFT description may even be qualitatively wrong.
 
-The quantum chemical paradigm in contast to DFT does offer a methodological hierarchy allowing systematic improvment of the accuracy in both weakly and strongly correlated systems. A problem that limits a routin applicability of high-level quantum chemical methods for etended systems is their steep scaling and large prefactor of the computational cost. In the last decades there have been several succesful development avenues for the quantum chemical approaches to be used for periodic systems. These include purely periodic models\cite{..} or periodic fragment approaches.\cite{..} In case of point defects, these approach still defect everal approaches have been developed that allowed one to neverthes apply 
+The quantum chemical paradigm in contast to DFT does offer a methodological hierarchy allowing systematic improvment of the accuracy in both weakly and strongly correlated systems. A problem that limits a routin applicability of high-level quantum chemical methods for etended systems is their steep scaling and large prefactor of the computational cost. In the last decades there have been several succesful development avenues for the quantum chemical approaches to be used for periodic systems. These include purely periodic models\cite{..} or periodic fragment approaches.\cite{..} These techniques are also applicable to point defects effectively allowing one to reach a beyond-DFT level, albeit within the periodic defect model. The latter suffers from the unphysical interactions between the defct images discussed above. Moreover, due to the higher computational cost of quantum chemistry calculations, the affordable supercells may even be smaller than in case of DFT.
+
+One way to get rid of unphysicalities associated with the periodiczation of the defect is to employ a finite-cluster approach\cite{..} optionally embedded, for exmaple in point charges.\cite{..} While solving one issue, this model unfortunately introduces others of its own. Firstly, construction of the cluster requires a cutting of bonds, which may substantially alter the electronic structure compared to the crystal. This becomes especially problematic for mixed ionic-covalent bonding patterns, where suitable clusters may not even exist. The surface effcts in the clusters may further enhance the deviation from the crystal. These effects may be reduced by introducing the embedding. However the embedding models commonly used with the finite clusters, such as point charges, pseudopotentials, saturating hydrogen atoms, etc. are not unique and offer only a rather crude representaton of the bulk.\cite{..}
+
+A much more sound model for studying defects in crystals that circumvents most issues of the standard models is the recently introduced aperiodic defect model. It embeds a crystalline fragment with the defect in the non-defective crystalline envoronemnt. The details of this model are given in section \ref{..}. Here we provide its main principles and advantages compared to the other models, as that will be essential for the current proposal.
+
+
+
+
+the itself is romize the transfrability ,  Next artifact in clusters is the the practical clsuters the surface/small  the embedding models may reduce the  Embedding that   structures Furthermore, compromize the   need to to cut bonds (which may be particular Construction of a cluster may be This approach is, however, requires construction of the depends on available 
 
 cell, wsich periodically repeated with a introduced inside a larger supercell  i.e. periodic    calculating such systems  defects or adsorbates is a  such a system directly, so a model has to be  has to introduce an approximate model.  Such a system is obvisly cannot be treA standard way of   to it is essential to be abl,e to theoretically model an atomistic level perties of such materials, their atomistic modeling at the atomistic level becomes essential. of  atomistically be model      The reaons is that the  of      local reeffect of a defect or the adsoprbate  There is a strong interplay between a defect or adsorbates and the host crystal 
 
