--- a/ProjectDescription_denis1.tex
+++ b/ProjectDescription_denis1.tex
@@ -158,8 +158,11 @@ The quantum chemical paradigm in contast to DFT does offer a methodological hier
 
 One way to get rid of unphysicalities associated with the periodiczation of the defect is to employ a finite-cluster approach\cite{..} optionally embedded, for exmaple in point charges.\cite{..} While solving one issue, this model unfortunately introduces others of its own. Firstly, construction of the cluster requires a cutting of bonds, which may substantially alter the electronic structure compared to the crystal. This becomes especially problematic for mixed ionic-covalent bonding patterns, where suitable clusters may not even exist. The surface effcts in the clusters may further enhance the deviation from the crystal. These effects may be reduced by introducing the embedding. However the embedding models commonly used with the finite clusters, such as point charges, pseudopotentials, saturating hydrogen atoms, etc. are not unique and offer only a rather crude representaton of the bulk.\cite{..}
 
-A much more sound model for studying defects in crystals that circumvents most issues of the standard models is the recently introduced aperiodic defect model. It embeds a crystalline fragment with the defect in the non-defective crystalline envoronemnt. The details of this model are given in section \ref{..}. Here we provide its main principles and advantages compared to the other models, as that will be essential for the current proposal.
+Very recently we have introduced\cite{..} a new model for studying defects in crystals that circumvents most issues of the standard models discussed above. has been recently introduced in Ref. \cite{..} by us.  It embeds a single (i.e. not periodically repeated) fragment containing the defect in the non-defective crystalline envoronemnt. This approach is denoted as ``aperiodic defect model'' and is schematicaly presented in Fig. \ref{}. The details of this model are given in section \ref{..}, here we provide its main principles and advantages compared to the other models, as that will be essential for the current proposal. The initial stage of the calculation is a periodic SCF for the pristine crystal. This calculation does not require a supercell and is thus computationally inexpensive. Using the localized occuped orbitals the crystal is then divided into the environment and fragment, in which the defect is introduced. The pritine crystal's periodic SCF solution forms the embedding field, which is added to the fragemnt's one-electron Hamiltinian. The fragemnt, now with the defect, undergoes an new SCF relaxation and a post-SCF treatment, single- or multireference depending on the defect character. The fragment calculation is molecular-like, differeing only by a modified one-electron Hamiltinian, and thus does not pose a significant implementational or computational challenge. The convergence to the thremodinamic limit can be achived by expansion of the fragment.   
 
+Below we list the advantages of the aperiodic model:
+\begin{itemize}
+  \item
 
 
 
